--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "4.6.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
     "chart.js": "2.9.4",
     "clipboard": "2.0.10",
     "ngx-clipboard": "15.0.1",
