--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "13.0.0",
     "@ng-select/ng-select": "^9.0.0",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "4.6.1",
+    "chart.js": "2.9.4",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "chart.js": "2.9.4",
     "clipboard": "2.0.10",
     "ngx-clipboard": "15.0.1",
     "ngx-toastr": "14.2.2",
