--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "clipboard": "2.0.10",
+    "concurrently": "^8.2.2",
     "ngx-clipboard": "15.0.1",
     "ngx-toastr": "14.2.2",
     "nouislider": "15.5.1",
