--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "13.0.0",
     "@ng-select/ng-select": "^9.0.0",
     "@popperjs/core": "^2.11.4",
+    "angular-star-rating": "^7.0.0",
     "bootstrap": "4.6.1",
     "chart.js": "2.9.4",
     "class-transformer": "0.5.1",
